# FLIP-PATASHALA

./: .replit  PORT-ACCESS.md  add_audit_logs_and_active_field.sql  ai_tips_enhancement_migration.sql  app-redirect.html  connect.html  content_subject_assignment_migration.sql  cookies.txt  diag-tool.cjs  direct-access.html  direct-connector.cjs  dummy_content.sql  engagement_tracking_migration.sql  faculty_permission_migration.sql  find-app.cjs  find-app.js  flip-launcher.cjs  forum_module_migration.sql  generate-hash.js  go-to-app.html  il_module_migration.sql  interactive_learning_column_fix_migration.sql  interactive_learning_quizzes_migration.sql  launch.html  migration.sql  migration_content.sql  migration_content_downloads.sql  migration_content_views.sql  migration_downloads.sql  migration_likes_percent.sql  migration_tags.sql  minimal-solution.cjs  package-lock.json  package.json  polls_migration.sql  port-redirect.html  proxy-server.cjs  pyproject.toml  redirect.html  replit-app-launcher.cjs  (+11 more)
attached_assets/: Pasted--PART-7Syncing-Students-in-Bulk-What-We-re-Doing-Let-s-add-tons-of-students-at-once-like-inv-1744463303741.txt  Pasted-Dear-Repplit-AI-We-re-creating-the-Interactive-Learning-IL-Module-for-Flip-Patashala-a-lively--1744889898610.txt  Pasted-Dummy-Data-for-Testing-Right-After-Planning-Here-s-realistic-test-data-with-Indian-names-for-the-C-1744723663098.txt  Pasted-Dummy-Data-for-Testing-Right-After-Planning-Here-s-realistic-test-data-with-Indian-names-for-the-U-1744483536732.txt  (+47 more)
client/: index.html
content/: db_fundamentals.pptx  sample.txt
(+138 files in other folders)
